# ChatBeauty

./: .gitignore  README.md  README_EN.md
backend/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: recommend.py
backend/app/middleware/: latency.py
backend/app/models/: schemas.py
backend/app/services/: explanation.py  reranking.py  retrieval.py  retrieval_resources.py
backend/ml/pipeline/: options.py  run.py  schemas.py
backend/ml/pipeline/transforms/: aggregate.py  io.py  join.py  pairs.py  parse.py  sink.py  validate.py
backend/ml/scripts/: embed_products.py
backend/notebooks/: embed_products_colab.ipynb
backend/sql/: init.sql
deploy/: setup-gcp.sh  setup-vm.sh
deploy/nginx/: chatbeauty.conf
frontend/: index.html
frontend/src/: App.css  App.tsx
frontend/src/api/: recommend.ts
